test/test-files/analyzer/imports/error-circular-import/exception.out
Semantic error in : ./test-files/analyzer/imports/error-circular-import/source2.spice:1:1:
Circular import detected: Circular import detected while importing './test-files/analyzer/imports/error-circular-import/source.spice'

1  import "source" as s;
   ^^^^^^^^^^^^^^^^^^^^^